--- a/src/app/pages/application-management/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/certificate-pdf/certificate-pdf.component.html
@@ -36,23 +36,23 @@
                         </span></div>
                     <p class="mb-6">
                         Certifica-se que a Sociedade comercial <span class="font-semibold underline">
-                            {{aplicanteData.empresaDto.nome}}
+                            {{aplicanteData.empresa.nome}}
                         </span>,
                         titular de Registo Comercial n.º <span class="font-semibold underline">
-                            {{aplicanteData.empresaDto.numeroRegistoComercial}}
+                            {{aplicanteData.empresa.numeroRegistoComercial}}
                         </span> e sede em
                         <span class="font-semibold underline">
-                            {{aplicanteData.empresaDto.sede.local}},
-                            {{aplicanteData.empresaDto.sede.aldeia.nome}},
-                            {{aplicanteData.empresaDto.sede.aldeia.suco.nome}},
-                            {{aplicanteData.empresaDto.sede.aldeia.suco.postoAdministrativo.nome}},
-                            {{aplicanteData.empresaDto.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
+                            {{aplicanteData.empresa.sede.local}},
+                            {{aplicanteData.empresa.sede.aldeia.nome}},
+                            {{aplicanteData.empresa.sede.aldeia.suco.nome}},
+                            {{aplicanteData.empresa.sede.aldeia.suco.postoAdministrativo.nome}},
+                            {{aplicanteData.empresa.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
                         </span>,<br>
                         está inscrita no sistema de registo do cadastro comercial junto da Direção-Geral do Comércio do
                         Ministério
                         do Comércio e Indústria, pelo exercício da atividade de
                         <span class="font-semibold underline">
-                            {{aplicanteData.pedidoInscricaoCadastroDto.classeAtividade.descricao}}
+                            {{aplicanteData.pedidoInscricaoCadastro.classeAtividade.descricao}}
                         </span>, nos termos do
                         Decreto-Lei
                         n.º
@@ -124,20 +124,20 @@
                             LESTE,
                             LDA</span>,
                         titular de Registo Comercial n.º <span class="font-semibold underline">
-                            {{aplicanteData.empresaDto.numeroRegistoComercial}}
+                            {{aplicanteData.empresa.numeroRegistoComercial}}
                         </span> e sede em
                         <span class="font-semibold underline">
-                            {{aplicanteData.empresaDto.sede.local}},
-                            {{aplicanteData.empresaDto.sede.aldeia.nome}},
-                            {{aplicanteData.empresaDto.sede.aldeia.suco.nome}},
-                            {{aplicanteData.empresaDto.sede.aldeia.suco.postoAdministrativo.nome}},
-                            {{aplicanteData.empresaDto.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
+                            {{aplicanteData.empresa.sede.local}},
+                            {{aplicanteData.empresa.sede.aldeia.nome}},
+                            {{aplicanteData.empresa.sede.aldeia.suco.nome}},
+                            {{aplicanteData.empresa.sede.aldeia.suco.postoAdministrativo.nome}},
+                            {{aplicanteData.empresa.sede.aldeia.suco.postoAdministrativo.municipio.nome}}
                         </span>,<br>
                         está inscrita no sistema de registo do cadastro comercial junto da Direção-Geral do Comércio do
                         Ministério
                         do Comércio e Indústria, pelo exercício da atividade de
                         <span class="font-semibold underline">
-                            {{aplicanteData.pedidoInscricaoCadastroDto.classeAtividade.descricao}}
+                            {{aplicanteData.pedidoInscricaoCadastro.classeAtividade.descricao}}
                         </span>, nos termos do Decreto-Lei
                         n.º
                         90/2023, de 27 de dezembro.
