--- a/src/app/pages/application-management/fatura/fatura.component.html
+++ b/src/app/pages/application-management/fatura/fatura.component.html
@@ -43,7 +43,7 @@
 
             <div class="mb-2 flex gap-2">
                 <span class="w-1/4 text-label text-gray-600">N.º de Registo Comercial:</span>
-                <span class="w-1/3 text-value text-black">{{aplicanteData.empresaDto.numeroRegistoComercial}}</span>
+                <span class="w-1/3 text-value text-black">{{aplicanteData.empresa.numeroRegistoComercial}}</span>
             </div>
 
             <div class="mb-2 flex gap-2">
@@ -68,12 +68,12 @@
             <div class="mb-2 flex gap-2">
                 <span class="w-1/4 text-label text-gray-600">Atividade comercial declarada:</span>
                 <span class="flex-1 text-value text-black">
-                    {{aplicanteData.pedidoInscricaoCadastroDto.classeAtividade.descricao}}
+                    {{aplicanteData.pedidoInscricaoCadastro.classeAtividade.descricao}}
                 </span>
 
-                <span class="w-1/4 text-label text-gray-600">Códifo:</span>
+                <span class="w-1/4 text-label text-gray-600">Código:</span>
                 <span class="flex-1 text-value text-black">
-                    {{aplicanteData.pedidoInscricaoCadastroDto.classeAtividade.codigo}}
+                    {{aplicanteData.pedidoInscricaoCadastro.classeAtividade.codigo}}
                 </span>
             </div>
 
@@ -128,7 +128,7 @@
                 </span>
             </div>
             <div class="mb-2 flex gap-2">
-                <span class="w-1/4 text-label text-gray-600">
+                <span class="w-1/3 text-label text-gray-600">
                     BALANCE AT PERIOD START
                 </span>
                 <span class="flex-1 text-value text-black">
@@ -179,7 +179,7 @@
                 </span>
             </div>
             <div class="mb-2 flex gap-2">
-                <span class="w-1/4 text-label text-gray-600">
+                <span class="w-1/3 text-label text-gray-600">
                     BALANCE AT PERIOD START
                 </span>
                 <span class="flex-1 text-value text-black">
