Created pages for Licenca Atividade Steps

--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -16,7 +16,7 @@
 
 
      <div class="w-full px-8" style="background: var(--surface-ground)">
-         <p-stepper [value]="1" class="basis-[50rem]" [linear]="false">
+         <p-stepper [value]="1" class="basis-[50rem]" [linear]="true">
              <p-step-list>
                  <p-step [value]="1">Empresa</p-step>
                  <p-step [value]="2">Proprietário(a) / Titular da empresa</p-step>
