--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -1,5 +1,4 @@
-<div class="text-center w-full h-full flex flex-col bg-auto md:bg-contain !bg-no-repeat"
-    style="background: var(--exception-pages-image); background-size: contain;">
+<div class="text-center w-full h-full flex flex-col bg-auto md:bg-contain !bg-no-repeat">
     <div id="login" class="flex flex-col">
         <p-fluid>
             <div class="flex items-center justify-center">
