--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1,7 +1,6 @@
  @if (!isSuccess) {
  <div class="w-full" style="background: var(--surface-ground)">
-     <p-fluid class="text-center w-full flex items-center md:items-center flex-col bg-auto md:bg-contain !bg-no-repeat"
-         style="padding: 2% 10% 2% 10%; background: var(--exception-pages-image); background-size: contain;">
+     <p-fluid class="text-center w-full flex items-center md:items-center flex-col bg-auto md:bg-contain !bg-no-repeat">
          <div class="flex flex-col">
              <div class="flex items-center justify-center">
                  <img src="/images/logo.png" style="width:85px" alt="mci-logo" />
@@ -15,7 +14,7 @@
      </p-fluid>
 
 
-     <div class="w-full px-8" style="background: var(--surface-ground)">
+     <div class="w-full px-8">
          <p-stepper [value]="1" class="basis-[50rem]" [linear]="true">
              <p-step-list>
                  <p-step [value]="1">Empresa</p-step>
